drop down menu items z-index 100 (safari/ipad issue) -v2 1001

--- a/app/assets/stylesheets/nav.css.scss
+++ b/app/assets/stylesheets/nav.css.scss
@@ -24,11 +24,11 @@ nav.navbar{
 
       ul.dropdown-menu{
         background: $darkbg;
+        z-index: 10001;
 
         li{
           font-size: 1.4em;
           a:hover {background: none;}
-          z-index: 100;
         }
 
       }
